[package]
name = "polkadot-core-primitives"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sp-core = { version = "4.0.0-dev", path = "../primitives/core", default-features = false }
sp-std = { version = "4.0.0-dev", path = "../primitives/std", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../primitives/runtime", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.10.0", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"parity-scale-codec/std",
	"parity-util-mem",
]
