[package]
name = "polkadot-parachain"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Types and utilities for creating and working with parachains"
edition = "2018"

[dependencies]
# note: special care is taken to avoid inclusion of `sp-io` externals when compiling
# this crate for WASM. This is critical to avoid forcing all parachain WASM into implementing
# various unnecessary Substrate-specific endpoints.
parity-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.10.0", optional = true }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", path = "../primitives/std", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../primitives/runtime", default-features = false }
sp-core = { version = "4.0.0-dev", path = "../primitives/core", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../frame/support", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
derive_more = "0.99.11"

# all optional crates.
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }

[features]
default = ["std"]
wasm-api = []
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"parity-util-mem",
	"polkadot-core-primitives/std",
	"frame-support/std",
]
