[package]
name = "polkadot-runtime-common"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.0"
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.13", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"

beefy-primitives = { version = "4.0.0-dev", path = "../../primitives/beefy", default-features = false }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api", default-features = false }
inherents = { package = "sp-inherents", version = "4.0.0-dev", path = "../../primitives/inherents", default-features = false }
sp-std = { package = "sp-std", version = "4.0.0-dev", path = "../../primitives/std", default-features = false }
sp-io = { version = "4.0.0-dev", path = "../../primitives/io", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime", default-features = false }
sp-session = { version = "4.0.0-dev", path = "../../primitives/session", default-features = false }
sp-staking = { version = "4.0.0-dev", path = "../../primitives/staking", default-features = false }
sp-core = { version = "4.0.0-dev", path = "../../primitives/core", default-features = false }
sp-npos-elections = { version = "4.0.0-dev", path = "../../primitives/npos-elections", default-features = false }

pallet-authorship = { version = "4.0.0-dev", path = "../../frame/authorship", default-features = false }
pallet-balances = { version = "4.0.0-dev", path = "../../frame/balances", default-features = false }
pallet-session = { version = "4.0.0-dev", path = "../../frame/session", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../../frame/support", default-features = false }
pallet-staking = { version = "4.0.0-dev", path = "../../frame/staking", default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", path = "../../frame/timestamp", default-features = false }
pallet-vesting = { version = "4.0.0-dev", path = "../../frame/vesting", default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", path = "../../frame/transaction-payment", default-features = false }
pallet-treasury = { version = "4.0.0-dev", path = "../../frame/treasury", default-features = false }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", path = "../../frame/election-provider-multi-phase", default-features = false }
pallet-beefy-mmr = { version = "4.0.0-dev", path = "../../frame/beefy-mmr", default-features = false }
frame-election-provider-support = { version = "4.0.0-dev", path = "../../frame/election-provider-support", default-features = false }
pallet-bags-list = { version = "4.0.0-dev", path = "../../frame/bags-list", default-features = false }

frame-benchmarking = { version = "4.0.0-dev", path = "../../frame/benchmarking", default-features = false, optional = true }
pallet-babe = { version = "4.0.0-dev", path = "../../frame/babe", default-features = false, optional = true }

primitives = { package = "polkadot-primitives", path = "../../polkadot-primitives", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }

slot-range-helper = { path = "slot_range_helper", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
frame-support-test = { version = "3.0.0", path = "../../frame/support/test" }
pallet-babe = { version = "4.0.0-dev", path = "../../frame/babe" }
pallet-treasury = { version = "4.0.0-dev", path = "../../frame/treasury" }
sp-keystore = { version = "0.10.0-dev", path = "../../primitives/keystore" }
serde_json = "1.0.67"
libsecp256k1 = "0.7.0"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-election-provider-multi-phase/std",
	"slot-range-helper/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"frame-system/std",
	"libsecp256k1/std",
	"runtime-parachains/std",
	"xcm/std",
	"sp-npos-elections/std",
	"pallet-bags-list/std"
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"libsecp256k1/static-context",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
]
try-runtime = [
	"runtime-parachains/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
]
