[package]
name = "polkadot-runtime-parachains"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", features = [ "derive" ], optional = true }
derive_more = "0.99.14"
bitflags = "1.3.2"

sp-api = { version = "4.0.0-dev", path = "../../primitives/api", default-features = false }
inherents = { package = "sp-inherents", version = "4.0.0-dev", path = "../../primitives/inherents", default-features = false }
sp-std = { package = "sp-std", version = "4.0.0-dev", path = "../../primitives/std", default-features = false }
sp-io = { version = "4.0.0-dev", path = "../../primitives/io", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime", default-features = false }
sp-session = { version = "4.0.0-dev", path = "../../primitives/session", default-features = false }
sp-staking = { version = "4.0.0-dev", path = "../../primitives/staking", default-features = false }
sp-core = { version = "4.0.0-dev", path = "../../primitives/core", default-features = false }
sp-keystore = { version = "0.10.0-dev", path = "../../primitives/keystore", optional = true }

pallet-authority-discovery = { version = "4.0.0-dev", path = "../../frame/authority-discovery", default-features = false }
pallet-authorship = { version = "4.0.0-dev", path = "../../frame/authorship", default-features = false }
pallet-balances = { version = "4.0.0-dev", path = "../../frame/balances", default-features = false }
pallet-session = { version = "4.0.0-dev", path = "../../frame/session", default-features = false }
pallet-staking = { version = "4.0.0-dev", path = "../../frame/staking", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", path = "../../frame/timestamp", default-features = false }
pallet-vesting = { version = "4.0.0-dev", path = "../../frame/vesting", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", path = "../../frame/benchmarking", default-features = false, optional = true }
frame-support = { version = "4.0.0-dev", path = "../../frame/support", default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../polkadot-primitives", default-features = false }

rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
futures = "0.3.17"
hex-literal = "0.3.3"
keyring = { package = "sp-keyring", path = "../../primitives/keyring" }
frame-support-test = { path = "../../frame/support/test" }
sc-keystore = { path = "../../client/keystore" }


[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
]
