[package]
name = "polkadot-runtime"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.130", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", version = "4.0.0-dev", path = "../../primitives/std", default-features = false }
babe-primitives = { package = "sp-consensus-babe", version = "4.0.0-dev", path = "../../primitives/babe", default-features = false }
beefy-primitives = { version = "4.0.0-dev", path = "../../primitives/beefy", default-features = false }
block-builder-api = { package = "sp-block-builder", version = "4.0.0-dev", path = "../../primitives/block-builder", default-features = false }
inherents = { package = "sp-inherents", version = "4.0.0-dev", path = "../../primitives/inherents", default-features = false }
offchain-primitives = { package = "sp-offchain", version = "4.0.0-dev", path = "../../primitives/offchain", default-features = false }
tx-pool-api = { package = "sp-transaction-pool", version = "4.0.0-dev", path = "../../primitives/transaction-pool", default-features = false }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api", default-features = false }
sp-std = { version = "4.0.0-dev", path = "../../primitives/std", default-features = false }
sp-io = { version = "4.0.0-dev", path = "../../primitives/io", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime", default-features = false }
sp-staking = { version = "4.0.0-dev", path = "../../primitives/staking", default-features = false }
sp-core = { version = "4.0.0-dev", path = "../../primitives/core", default-features = false }
sp-session = { version = "4.0.0-dev", path = "../../primitives/session", default-features = false }
sp-version = { version = "4.0.0-dev", path = "../../primitives/version", default-features = false }
sp-npos-elections = { version = "4.0.0-dev", path = "../../primitives/npos-elections", default-features = false }

pallet-authority-discovery = { version = "4.0.0-dev", path = "../../frame/authority-discovery", default-features = false }
pallet-authorship = { version = "4.0.0-dev", path = "../../frame/authorship", default-features = false }
pallet-babe = { version = "4.0.0-dev", path = "../../frame/babe", default-features = false }
pallet-balances = { version = "4.0.0-dev", path = "../../frame/balances", default-features = false }
pallet-bounties = { version = "4.0.0-dev", path = "../../frame/bounties", default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", path = "../../frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", path = "../../frame/transaction-payment/rpc/runtime-api", default-features = false }
pallet-collective = { version = "4.0.0-dev", path = "../../frame/collective", default-features = false }
pallet-democracy = { version = "4.0.0-dev", path = "../../frame/democracy", default-features = false }
pallet-elections-phragmen = { version = "4.0.0-dev", path = "../../frame/elections-phragmen", default-features = false }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", path = "../../frame/election-provider-multi-phase", default-features = false }
frame-executive = { version = "4.0.0-dev", path = "../../frame/executive", default-features = false }
pallet-grandpa = { version = "4.0.0-dev", path = "../../frame/grandpa", default-features = false }
pallet-identity = { version = "4.0.0-dev", path = "../../frame/identity", default-features = false }
pallet-im-online = { version = "4.0.0-dev", path = "../../frame/im-online", default-features = false }
pallet-indices = { version = "4.0.0-dev", path = "../../frame/indices", default-features = false }
pallet-membership = { version = "4.0.0-dev", path = "../../frame/membership", default-features = false }
pallet-mmr-primitives = { version = "4.0.0-dev", path = "../../frame/merkle-mountain-range/primitives", default-features = false }
pallet-multisig = { version = "4.0.0-dev", path = "../../frame/multisig", default-features = false }
pallet-nicks = { version = "4.0.0-dev", path = "../../frame/nicks", default-features = false }
pallet-offences = { version = "4.0.0-dev", path = "../../frame/offences", default-features = false }
pallet-proxy = { version = "4.0.0-dev", path = "../../frame/proxy", default-features = false }
pallet-scheduler = { version = "4.0.0-dev", path = "../../frame/scheduler", default-features = false }
pallet-session = { version = "4.0.0-dev", path = "../../frame/session", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../../frame/support", default-features = false }
pallet-staking = { version = "4.0.0-dev", path = "../../frame/staking", default-features = false }
pallet-staking-reward-curve = { version = "4.0.0-dev", path = "../../frame/staking/reward-curve" }
frame-system = {version = "4.0.0-dev", path = "../../frame/system", default-features = false }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", path = "../../frame/system/rpc/runtime-api", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", path = "../../frame/timestamp", default-features = false }
pallet-tips = { version = "4.0.0-dev", path = "../../frame/tips", default-features = false }
pallet-treasury = { version = "4.0.0-dev", path = "../../frame/treasury", default-features = false }
pallet-vesting = { version = "4.0.0-dev", path = "../../frame/vesting", default-features = false }
pallet-utility = { version = "4.0.0-dev", path = "../../frame/utility", default-features = false }
frame-election-provider-support = { version = "4.0.0-dev", path = "../../frame/election-provider-support", default-features = false }

frame-benchmarking = { version = "4.0.0-dev", path = "../../frame/benchmarking", default-features = false, optional = true }
frame-try-runtime = { version = "4.0.0-dev", path = "../../frame/try-runtime", default-features = false, optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", path = "../../frame/system/benchmarking", default-features = false, optional = true }
pallet-offences-benchmarking = { version = "4.0.0-dev", path = "../../frame/offences/benchmarking", default-features = false, optional = true }
pallet-session-benchmarking = { version = "4.0.0-dev", path = "../../frame/session/benchmarking", default-features = false, optional = true }
hex-literal = { version = "0.3.3", optional = true }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../polkadot-primitives", default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", path = "../../primitives/keyring" }
sp-trie = { path = "../../primitives/trie" }
trie-db = "0.22.3"
serde_json = "1.0.67"
separator = "0.4.1"

[build-dependencies]
substrate-wasm-builder = { path = "../../utils/wasm-builder }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"frame-support/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-democracy/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-tips/std",
	"pallet-babe/std",
	"pallet-vesting/std",
	"pallet-utility/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"beefy-primitives/std",
	"pallet-mmr-primitives/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-election-provider-support/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nicks/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-utility/try-runtime",
	"runtime-common/try-runtime",
]
# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]
