[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "pallet-xcm"
version = "0.9.12"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

sp-std = { version = "4.0.0-dev", path = "../../primitives/std", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime", default-features = false }
sp-core = { version = "4.0.0-dev", path = "../../primitives/core", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../../frame/support", default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", path = "../../frame/balances" } 
polkadot-runtime-parachains = { path = "../../bin/node/runtime/parachains" }
sp-io = { version = "4.0.0-dev", path = "../../primitives/io", default-features = false  }
xcm-builder = { path = "../xcm-builder" }
polkadot-parachain = { path = "../../parachain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
]
runtime-benchmarks = []
