[package]
name = "xcm-simulator"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
paste = "1.0.5"

frame-support = { version = "4.0.0-dev", path = "../../frame/support" }
sp-io = { version = "4.0.0-dev", path = "../../primitives/io" }
sp-std = { version = "4.0.0-dev", path = "../../primitives/std" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
polkadot-core-primitives = { path = "../../core-primitives"}
polkadot-parachain = { path = "../../parachain" }
polkadot-runtime-parachains = { path = "../../bin/node/runtime/parachains" }
