[package]
name = "test-parachain-adder"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test parachain which adds to a number as its state transition"
edition = "2018"
build = "build.rs"

[dependencies]
parachain = { package = "polkadot-parachain", path = "../../", default-features = false, features = [ "wasm-api" ] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", path = "../../../primitives/std", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
dlmalloc = { version = "0.2.1", features = [ "global" ] }

# We need to make sure the global allocator is disabled until we have support of full substrate externalities
sp-io = { version = "4.0.0-dev", path = "../../../primitives/io", default-features = false, features = [ "disable_allocator" ] }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../../utils/wasm-builder" }

[features]
default = [ "std" ]
std = [
	"parachain/std",
	"sp-std/std",
]
