[package]
name = "test-parachain-halt"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test parachain which executes forever"
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0", path = "../../../utils/wasm-builder" }

[features]
default = [ "std" ]
std = []
