[package]
name = "xcm-simulator-fuzzer"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
honggfuzz = "0.5.54"
scale-info = { version = "1.0", features = ["derive"] }

frame-system = { version = "4.0.0-dev", path = "../../../frame/system" }
frame-support = { version = "4.0.0-dev", path = "../../../frame/support" }
pallet-balances = { version = "4.0.0-dev", path = "../../../frame/balances" }
sp-std = { version = "4.0.0-dev", path = "../../../primitives/std" }
sp-core = { version = "4.0.0-dev", path = "../../../primitives/core" }
sp-runtime = { version = "4.0.0-dev", path = "../../../primitives/runtime" }
sp-io = { version = "4.0.0-dev", path = "../../../primitives/io" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives" }
polkadot-runtime-parachains = { path = "../../../bin/node/runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }

[[bin]]
path = "src/fuzz.rs"
name = "xcm-fuzzer"
